# Uniconn

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindNCCL.cmake  Unc_config.hpp.in  UniconnConfig.cmake.in
examples/CG-cuda/: CMakeLists.txt
examples/CG-cuda/include/: common.hpp  mmio.h
examples/CG-cuda/src/: standard_gpuccl.cu  standard_mpi.cu  standard_nvshmem_device.cu  standard_nvshmem_host.cu  standard_uniconn.cu
examples/CG-hip/: CMakeLists.txt
examples/CG-hip/include/: common.hpp
examples/CG-hip/src/: mmio.c  standard_gpuccl.cu  standard_mpi.cu  standard_nvshmem_device.cu  standard_nvshmem_host.cu  standard_uniconn.cu
examples/benchmarks/: CMakeLists.txt
examples/benchmarks/include/: common.hpp
examples/benchmarks/src/: bandwidth_gpuccl.cu  bandwidth_mpi.cu  bandwidth_nvshmem_device.cu  bandwidth_uniconn.cu  latency_gpuccl.cu  latency_mpi.cu  latency_nvshmem_device.cu  latency_uniconn.cu
examples/common/: utils.hpp
examples/jacobi2D/: CMakeLists.txt
examples/jacobi2D/include/: common.hpp
examples/jacobi2D/src/: single_stream_gpuccl.cu  single_stream_mpi.cu  single_stream_nvshmem_device.cu  single_stream_nvshmem_host.cu  single_stream_uniconn.cu
include/: Uniconn.hpp
include/uniconn/: CMakeLists.txt  gpuccl.hpp  gpumpi.hpp  gpushmem.hpp  utils.hpp
include/uniconn/gpuccl/: common.hpp  communicator.hpp  coordinator.hpp  environment.hpp  memory.hpp
include/uniconn/gpumpi/: CMakeLists.txt  common.hpp  communicator.hpp  coordinator.hpp  environment.hpp  memory.hpp
include/uniconn/gpushmem/: common.hpp  communicator.hpp  coordinator.hpp  environment.hpp  memory.hpp
include/uniconn/interfaces/: CMakeLists.txt  communicator.hpp  coordinator.hpp  environment.hpp  kernelinfo.hpp  memory.hpp
scripts/lumi/: bandwidth_inter.sh  bandwidth_intra.sh  build_library.sh  cg_1_node.sh  cg_2_node.sh  cg_2_node_half.sh  cg_4_node.sh  cg_8_node.sh  env.sh  jacobi_1_node.sh  jacobi_2_node.sh  jacobi_4_node.sh  jacobi_8_node.sh  latency_inter.sh  latency_intra.sh
scripts/marenostrum/: bandwidth_inter.sh  bandwidth_intra.sh  build_library.sh  cg_16_node.sh  cg_1_node.sh  cg_2_node.sh  cg_4_node.sh  cg_8_node.sh  env.sh  jacobi_16_node.sh  jacobi_1_node.sh  jacobi_2_node.sh  jacobi_4_node.sh  jacobi_8_node.sh  latency_inter.sh  latency_intra.sh
scripts/perlmutter/: bandwidth_inter.sh  bandwidth_intra.sh  build_library.sh  cg_16_node.sh  cg_1_node.sh  cg_2_node.sh  cg_4_node.sh  cg_8_node.sh  env.sh  jacobi_16_node.sh  jacobi_1_node.sh  jacobi_2_node.sh  jacobi_4_node.sh  jacobi_8_node.sh  latency_inter.sh  latency_intra.sh
scripts/plot/: plot_experiment_benchmarks.py  plot_experiment_cg.py  plot_experiment_jacobi.py
src/: CMakeLists.txt  kernelinfo.cu  utils.hpp
src/gpuccl/: allgather.cu  allgatherv.cu  allreduce.cu  alltoall.cu  alltoallv.cu  broadcast.cu  common.hpp  communicator.cu  coordinator.cu  environment.cu  gather.cu  gatherv.cu  memory.cu  peertopeer.cu  reduce.cu  scatter.cu  scatterv.cu
src/gpumpi/: CMakeLists.txt  allgather.cu  allgatherv.cu  allreduce.cu  alltoall.cu  alltoallv.cu  broadcast.cu  common.hpp  communicator.cu  coordinator.cu  environment.cu  gather.cu  gatherv.cu  memory.cu  peertopeer.cu  reduce.cu  scatter.cu  scatterv.cu
src/gpushmem/: CMakeLists.txt  allgather.cu  allgatherv.cu  allreduce.cu  allreduce_and.cu  allreduce_base.hpp  allreduce_max.cu  allreduce_min.cu  allreduce_or.cu  allreduce_prod.cu  allreduce_sum.cu  allreduce_xor.cu  alltoall.cu  alltoallv.cu  broadcast.cu  common.hpp  communicator.cu  coordinator.cu  environment.cu  gather.cu  gatherv.cu  memory.cu  peertopeer.cu  reduce.cu  reduce_and.cu  reduce_base.hpp  reduce_max.cu  reduce_min.cu  reduce_or.cu  reduce_prod.cu  reduce_sum.cu  reduce_xor.cu  scatter.cu  scatterv.cu
